# jenkins-pipeline-flask

./: Jenkinsfile-cd  Jenkinsfile-ci  README.md  pyproject.toml
src/book_service/: book.py  book_service.py
tests/: book_service_connector.py  book_service_test.py  requests_test.py  requests_test_json.py
